<resources>
    <string name="app_name">RubricInventoryApp</string>
    <string name="title_activity_product">ProductActivity</string>

    <!-- Insert Product-->
    <string name="info_insert_product_title">Add Product</string>
    <string name="info_product_name">Product Name</string>
    <string name="info_product_quantity">Product Quantity</string>
    <string name="info_product_price">Product Price</string>
    <string name="info_product_supplier_name">Supplier Name</string>
    <string name="info_product_supplier_phone">Supplier Phone</string>
    <string name="info_total_quantity">Total Qty: </string>
    <string name="info_sold_items">Sold Items: </string>
    <string name="info_total_price">Total Price: </string>
    <string name="info_indiv_price">Item Price: </string>
    <string name="button_sell_item">Sell one item</string>
    <string name="button_select_image">Select Image from sdcard</string>
    <string name="info_placeholder_image">Placeholder Image</string>
    <string name="info_supplier">Supplier :</string>
    <string name="info_plus">+</string>
    <string name="info_minus">-</string>
    <string name="info_absence_text">Please do the following to add the products \n
        1.Tap the icon on the Toolbar \n
        2.Fill all fields in Add Product screen \n
        3.Tap the + icon in the bottom of Add product
         </string>
    <string name="info_image_not_picked">You have not picked Image</string>
    <string name="info_image_pick_error">Something went wrong</string>
    <string name="button_order_more">Order More</string>
    <string name="title_dialog_delete_product">Delete Product</string>
    <string name="info_dialog_delete_product_confirmation">Are you sure you want to delete this product?</string>
    <string name="info_select_picture">select_picture</string>

    <string name="menu_delete">Delete</string>
    <string name="info_contact_supplier">Contact supplier</string>
    <string name="info_delete_failure_message">Cannot delete now, Please Try again later</string>
    <string name="info_need_access">Please grant permission to access the app</string>

    <string name="info_placeholder_qty">Qty:</string>
    <string name="info_placeholder_sold">Sold:</string>
    <string name="info_placeholder_price">$ </string>


    <string name="info_error_name">Product requires a name </string>
    <string name="info_error_quantity">Product requires a quantity</string>
    <string name="info_error_price">Product requires price</string>
    <string name="info_error_image">Product requires Image .Please choose an image from Sdcard</string>
    <string name="info_error_supplier_name">Product requires supplierName</string>
    <string name="info_error_supplier_phone">Product requires supplierPhone(10 numbers)</string>
</resources>
