<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.example.rubricinventoryapp.InsertProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/eggs"
            android:scaleType="centerCrop"
            android:id="@+id/imageView_product"/>

        <Button
            android:id="@+id/button_insert_product_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_select_image"/>

    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/info_product_name">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText_product_name"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/info_product_quantity">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText_product_quantity"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/info_product_price">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText_product_price"
            android:layout_width="match_parent"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/info_product_supplier_name">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText_product_supplier_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/info_product_supplier_phone">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText_product_supplier_phone"
            android:inputType="phone"
            android:maxLength="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />



</LinearLayout>
